# xy-opencl-intel-gpu

./: .gitignore  CMakeLists.txt  compile-and-run.sh  compute_distance.cl  main.cpp  run-docker-opencl.sh-20200731
distance/: compute_distance.cl  main.cpp
distance2-scale10/: compute_distance.cl  main.cpp
distance3-scale1024/: main.cpp
distance4-dim64-bs8096-ref-cpu-gpu/: compute_distance.cl  main.cpp
distance5-dim64-avx2_L2/: main.cpp
distance6-dim64-avx2-opencl/: compute_distance.cl  main.cpp
matmul/: compute_distance.cl
